--- a/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
@@ -8,24 +8,21 @@
              xmlns:i="using:Avalonia.Xaml.Interactivity"
              xmlns:ia="using:Avalonia.Xaml.Interactions.Core"
              xmlns:utility="using:SerialLoops.Utility"
-             xmlns:v="using:SerialLoops.Views"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:ScriptEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptEditorView"
              Name="Editor">
-    <UserControl.Resources>
-        <utility:HeightConverter x:Key="HeightConverter"/>
-    </UserControl.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" MinHeight="384"/>
+            <RowDefinition Height="4"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" MinWidth="250"/>
-            <ColumnDefinition Width="4"/>
+            <ColumnDefinition Width="2"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
@@ -43,19 +40,18 @@
                 <Svg Path="avares://SerialLoops/Assets/Icons/Clear.svg" Width="22"/>
             </Button>
         </StackPanel>
-        <TreeDataGrid Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="{Binding Source}"
+        <TreeDataGrid Grid.Column="0" Grid.Row="1" Grid.RowSpan="3" Source="{Binding Source}"
                       ShowColumnHeaders="False" CanUserResizeColumns="False" Name="CommandTree"
                       AutoDragDropRows="True" RowDragStarted="TreeDataGrid_OnRowDragStarted" RowDrop="TreeDataGrid_OnRowDrop"
                       KeyDown="CommandTree_OnKeyDown">
         </TreeDataGrid>
 
-        <GridSplitter Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Background="{StaticResource GroupLineColor}" ResizeDirection="Columns"/>
+        <GridSplitter Grid.Column="1" Grid.Row="0" Grid.RowSpan="4" Background="{StaticResource GroupLineColor}" ResizeDirection="Columns"/>
 
-        <Grid Grid.Column="2" Grid.Row="1" ColumnDefinitions="Auto,*" RowDefinitions="*,Auto">
+        <Grid Grid.Column="2" Grid.Row="1" ColumnDefinitions="Auto,*" RowDefinitions="*">
             <Image Source="{Binding PreviewBitmap, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
-                   Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Width="256" VerticalAlignment="Top"/>
-            <TabControl Grid.Column="1" Grid.Row="0" MinHeight="384"
-                        MaxHeight="{Binding $parent[v:MainWindow].Bounds.Size.Height, Converter={StaticResource HeightConverter}}">
+                   Grid.Column="0" Grid.Row="0" Width="256" VerticalAlignment="Top"/>
+            <TabControl Grid.Column="1" Grid.Row="0">
                 <TabControl.Items>
 
                     <TabItem Header="{x:Static assets:Strings.Starting_Chibis}">
@@ -190,7 +186,10 @@
             </TabControl>
             <StackPanel Grid.Column="1" Grid.Row="1" />
         </Grid>
-        <ScrollViewer Grid.Column="2" Grid.Row="2">
+
+        <GridSplitter Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" Background="{StaticResource GroupLineColor}" ResizeDirection="Rows"/>
+
+        <ScrollViewer Grid.Column="2" Grid.Row="3">
             <ContentPresenter Margin="10" DataContext="{Binding CurrentCommandViewModel}" Content="{Binding}"/>
         </ScrollViewer>
     </Grid>
