--- a/src/SerialLoops/Views/Dialogs/ProjectRenameDuplicateDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ProjectRenameDuplicateDialog.axaml
@@ -23,7 +23,7 @@
 
             <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding NewName}"
                      Watermark="{x:Static assets:Strings.Haroohie}" Margin="10 0 0 0"
-                     Width="200" Name="NameBox"/>
+                     Width="200" Name="NameBox" KeyDown="NameBox_KeyDown"/>
 
             <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal" Spacing="5"
                         Margin="0 30 0 0">
