--- a/src/SerialLoops/Views/MainWindow.axaml
+++ b/src/SerialLoops/Views/MainWindow.axaml
@@ -20,7 +20,8 @@
         Title="{Binding Title}"
         TransparencyLevelHint="AcrylicBlur"
         Background="{DynamicResource FallbackBackgroundColor}"
-        ExtendClientAreaToDecorationsHint="True">
+        ExtendClientAreaToDecorationsHint="True"
+        WindowState="Maximized">
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
@@ -34,14 +35,14 @@
 
     <Panel>
         <controls:AcrylicBorderHandler/>
-        <Grid RowDefinitions="Auto,*" Margin="{OnPlatform macOS='0 15 0 0', Default='0'}">
+        <Grid RowDefinitions="Auto,*" Margin="{OnPlatform macOS='0 15 0 0', Default='5'}">
             <StackPanel IsVisible="False" Margin="5">
                 <Button Command="{Binding SaveProjectCommand}" HotKey="{Binding SaveHotKey}"/>
                 <Button Command="{Binding SearchProjectCommand}" HotKey="{Binding SearchHotKey}"/>
                 <Button Command="{Binding CloseProjectCommand}" HotKey="{Binding CloseProjectKey}"/>
             </StackPanel>
             <StackPanel Grid.Row="0" HorizontalAlignment="Stretch" Margin="0 5">
-                <NativeMenuBar Name="MenuBar" Margin="0 0 0 5"/>
+                <NativeMenuBar Name="MenuBar" Margin="5 0 0 5"/>
                 <Grid ColumnDefinitions="Auto,*" Classes.project="{Binding OpenProject, Converter={x:Static ObjectConverters.IsNotNull}}" Margin="0" VerticalAlignment="Center">
                     <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Margin="{OnPlatform Default='10 0 0 0', macOS='10 0 10 0'}">
                         <Image Source="{Binding OpenProjectIcon, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
